--- a/content/dataset/PAGE/homeMain.yaml
+++ b/content/dataset/PAGE/homeMain.yaml
@@ -153,7 +153,8 @@ query_main:     &query_main
                 A.Categoria_Subfamilia          AS Categoria_Subfamilia,
                 A.Archivo_Imagen                AS Archivo_Imagen,
                 A.Id_Impuesto                   AS Id_Impuesto,
-                D.Descripcion                   AS Fulfillment_desc
+                D.Descripcion                   AS Fulfillment_desc,
+                TA.Descripcion                  AS TipoArticulo_desc
             FROM        Articulos_Mesa_Recomendados AMR
             INNER JOIN  Articulos A
                 ON      AMR.Id_Articulo = A.Id_Articulo AND
@@ -166,6 +167,9 @@ query_main:     &query_main
                         -------------- ***** CONDITION
                         D.Id_Esquema = 'PROD' AND
                         D.Pedido_Especial = 'N'
+            -------------- Tipos Articulos
+            INNER JOIN  Tipos_Articulos TA
+                ON      A.Id_Tipo_Articulo = TA.Id_Tipo_Articulo
             -------------- Product Form
             LEFT JOIN   CG_Ref_Codes CGRC_PF
                 ON      CGRC_PF.RV_Domain = 'ONIX:ProductForm' AND
@@ -208,14 +212,15 @@ query_main:     &query_main
                           "CurrencyCode_desc", "PriceAmount",
                           "Categoria_Seccion", "Categoria_Grupo", "Categoria_Familia",
                           "Categoria_Subfamilia", "Archivo_Imagen", "Id_Impuesto",
-                          "Fulfillment_desc" ]
+                          "Fulfillment_desc", "TipoArticulo_desc" ]
     query.post:         [ "tmklib.fixes.PROD.title",
                           "tmklib.fixes.PROD.calcImages",
                           "tmklib.PROD.calculateTaxes",
                           "tmklib.url.PROD",
                           "tmklib.fixes.PROD.embedRatings",
                           "tmklib.fixes.IMPR.title",
-                          "tmklib.url.IMPR"
+                          "tmklib.url.IMPR",
+                          "tmklib.fixes.PROD.tipoArticulo"
                         ]
 
 #
