Third part of Tipos_Articulos change (first = product, second = page, third = subject)

--- a/content/dataset/SUBJ/subjectCommentsGrupo.yaml
+++ b/content/dataset/SUBJ/subjectCommentsGrupo.yaml
@@ -47,6 +47,7 @@ query_unified:  &query_unified
                                 A.Categoria_Familia             AS Categoria_Familia,
                                 A.Categoria_Subfamilia          AS Categoria_Subfamilia,
                                 A.Archivo_Imagen                AS Archivo_Imagen,
+                                TA.Descripcion                  AS TipoArticulo_desc,
                                 -------------- USED TO LIMIT THE COUNT OF RETRIEVED ITEMS
                                 row_number() OVER (PARTITION BY S.SubjectId
                                                    ORDER BY S.SubjectId, C.Id_Comentario DESC)
@@ -62,6 +63,9 @@ query_unified:  &query_unified
                                 --------------- condition
                                 D.Id_Esquema = 'PROD' AND
                                 D.Pedido_especial = 'N'
+                    -------------- Tipos Articulos
+                    INNER JOIN  Tipos_Articulos TA
+                        ON      A.Id_Tipo_Articulo = TA.Id_Tipo_Articulo
                     INNER JOIN  Stage0_Subjects S
                         ON      A.Categoria_Seccion = S.Categoria_Seccion    AND
                                 A.Categoria_Grupo   = S.Categoria_Grupo      AND
@@ -88,10 +92,12 @@ query_unified:  &query_unified
                           "Title", "ProductForm", "NickName",
                           "Categoria_Seccion", "Categoria_Grupo",
                           "Categoria_Familia", "Categoria_Subfamilia",
-                          "Archivo_Imagen" ]
+                          "Archivo_Imagen", "TipoArticulo_desc" ]
     query.post:         [ "tmklib.fixes.PROD.title",
                           "tmklib.fixes.PROD.calcImages",
-                          "tmklib.url.PROD" ]
+                          "tmklib.url.PROD",
+                          "tmklib.fixes.PROD.tipoArticulo"
+                        ]
 
 
 
