--- a/content/dataset/PROD/productRelated.yaml
+++ b/content/dataset/PROD/productRelated.yaml
@@ -318,7 +318,7 @@ query_unified:  &query_unified
                                             ART.Id_Articulo  = RCO.Id_Articulo AND
                                             RCO.Cant_Comprobantes >= 1 AND
                                             RCO.Tipo_Relacion = 'C' AND
-                                            {{ID:Id_Articulo}} AND
+                                            {{ID:Id_Articulo#BETWEEN}} AND
                                             ARR.Habilitado_Tematika = 'S' AND
                                             ARR.Categoria_Seccion IN (1, 3, 4, 5)
                             )
