--- a/content/dataset/PROD/productMain.yaml
+++ b/content/dataset/PROD/productMain.yaml
@@ -321,13 +321,15 @@ query.sql:          >
                 WHEN A.Activo = 'SI' AND A.Habilitado_Tematika = 'S' THEN   'Activo'
                 ELSE                                                        'Inactivo'
             END                             AS MarketPublishingStatus_desc,
-            CASE D.Pedido_Especial
-                WHEN 'N' THEN                   '21'
+            CASE
+                WHEN D.Id_Disponibilidad = 3   THEN '40'
+                WHEN D.Pedido_Especial   = 'N' THEN '21'
                 ELSE                            '22'
             END                             AS ProductAvailability,
             'ONIX.65'                       AS ProductAvailability_list,
-            CASE D.Pedido_Especial
-                WHEN 'N' THEN                   'En Stock'
+            CASE
+               	WHEN D.Id_Disponibilidad = 3   THEN 'Actualmente sin Stock'
+                WHEN D.Pedido_Especial   = 'N' THEN 'En Stock'
                 ELSE                            'Pedido Especial'
             END                             AS ProductAvailability_desc,
             CASE D.Tipo_Unidad
