--- a/content/dataset/SUBJ/subjectMainFamilia.yaml
+++ b/content/dataset/SUBJ/subjectMainFamilia.yaml
@@ -117,15 +117,17 @@ query_products_main:     &query_products_main
                             WHEN A.Activo = 'SI' AND A.Habilitado_Tematika = 'S' THEN   'Activo'
                             ELSE                                                        'Inactivo'
                         END                             AS MarketPublishingStatus_desc,
-                        CASE D.Pedido_Especial
-                            WHEN 'N' THEN                   '21'
-                            ELSE                            '22'
-                        END                             AS ProductAvailability,
-                        'ONIX.65'                       AS ProductAvailability_list,
-                        CASE D.Pedido_Especial
-                            WHEN 'N' THEN                   'En Stock'
-                            ELSE                            'Pedido Especial'
-                        END                             AS ProductAvailability_desc,
+                        CASE
+			                WHEN D.Id_Disponibilidad = 3   THEN '40'
+			                WHEN D.Pedido_Especial   = 'N' THEN '21'
+			                ELSE                            '22'
+			            END                             AS ProductAvailability,
+			            'ONIX.65'                       AS ProductAvailability_list,
+			            CASE
+			               	WHEN D.Id_Disponibilidad = 3   THEN 'Actualmente sin Stock'
+			                WHEN D.Pedido_Especial   = 'N' THEN 'En Stock'
+			                ELSE                            'Pedido Especial'
+			            END                             AS ProductAvailability_desc,
                         CASE D.Tipo_Unidad
                             WHEN 'HORAS' THEN               '01'
                             ELSE                            '02'
@@ -474,15 +476,17 @@ query_showcase_main:     &query_showcase_main
                             WHEN A.Activo = 'SI' AND A.Habilitado_Tematika = 'S' THEN   'Activo'
                             ELSE                                                        'Inactivo'
                         END                             AS MarketPublishingStatus_desc,
-                        CASE D.Pedido_Especial
-                            WHEN 'N' THEN                   '21'
-                            ELSE                            '22'
-                        END                             AS ProductAvailability,
-                        'ONIX.65'                       AS ProductAvailability_list,
-                        CASE D.Pedido_Especial
-                            WHEN 'N' THEN                   'En Stock'
-                            ELSE                            'Pedido Especial'
-                        END                             AS ProductAvailability_desc,
+                        CASE
+			                WHEN D.Id_Disponibilidad = 3   THEN '40'
+			                WHEN D.Pedido_Especial   = 'N' THEN '21'
+			                ELSE                            '22'
+			            END                             AS ProductAvailability,
+			            'ONIX.65'                       AS ProductAvailability_list,
+			            CASE
+			               	WHEN D.Id_Disponibilidad = 3   THEN 'Actualmente sin Stock'
+			                WHEN D.Pedido_Especial   = 'N' THEN 'En Stock'
+			                ELSE                            'Pedido Especial'
+			            END                             AS ProductAvailability_desc,
                         CASE D.Tipo_Unidad
                             WHEN 'HORAS' THEN               '01'
                             ELSE                            '02'
