--- a/content/dataset/PAGE/homeShowcase.yaml
+++ b/content/dataset/PAGE/homeShowcase.yaml
@@ -177,7 +177,8 @@ query_recommended_main:     &query_recommended_main
                 ON      A.Id_Disponibilidad = D.Id_Disponibilidad AND
                         -------------- ***** CONDITION
                         D.Id_Esquema = 'PROD' AND
-                        D.Pedido_Especial = 'N'
+                        D.Pedido_Especial = 'N' AND
+                        D.Id_Disponibilidad <> 3
             -------------- Tipos Articulos
             INNER JOIN  Tipos_Articulos TA
                 ON      A.Id_Tipo_Articulo = TA.Id_Tipo_Articulo
@@ -226,6 +227,7 @@ query_recommended_main:     &query_recommended_main
                           "Fulfillment_desc", "TipoArticulo_desc" ]
     query.post:         [ "tmklib.fixes.PROD.title",
                           "tmklib.fixes.PROD.calcImages",
+                          "tmklib.fixes.PROD.filterWithoutImage",
                           "tmklib.PROD.calculateTaxes",
                           "tmklib.url.PROD",
                           "tmklib.fixes.PROD.embedRatings",
@@ -499,7 +501,8 @@ query_showcase_main:     &query_showcase_main
                         ON      A.Id_Disponibilidad = D.Id_Disponibilidad AND
                                 -------------- ***** CONDITION
                                 D.Id_Esquema = 'PROD' AND
-                                D.Pedido_Especial = 'N'
+                                D.Pedido_Especial = 'N' AND
+                                D.Id_Disponibilidad <> 3
                     -------------- Tipos Articulos
                     INNER JOIN  Tipos_Articulos TA
                         ON      A.Id_Tipo_Articulo = TA.Id_Tipo_Articulo
