--- a/content/dataset/SUBJ/subjectDataSeccion.yaml
+++ b/content/dataset/SUBJ/subjectDataSeccion.yaml
@@ -171,7 +171,9 @@ query_products_main:     &query_products_main
                                 -------------- ***** CONDITION
                                 A.Activo = 'SI' AND
                                 A.Habilitado_Tematika = 'S' AND
-                                A.Precio_Venta_Vigente >= 7.0
+                                A.Precio_Venta_Vigente >= 7.0 AND
+                                A.Archivo_Imagen IS NOT NULL AND
+                                A.Archivo_Imagen <> 'N'
                     -------------- Ranking
                     LEFT JOIN   Mas_Vendidos_Seccion MVS
                         ON      A.Categoria_Seccion = MVS.Categoria_Seccion AND
@@ -226,6 +228,7 @@ query_products_main:     &query_products_main
                           "Fulfillment_desc", "TipoArticulo_desc", "Row_Number" ]
     query.post:         [ "tmklib.fixes.PROD.title",
                           "tmklib.fixes.PROD.calcImages",
+                          "tmklib.fixes.PROD.filterWithoutImage",
                           "tmklib.PROD.calculateTaxes",
                           "tmklib.url.PROD",
                           "tmklib.fixes.PROD.embedRatings",
@@ -261,7 +264,9 @@ augment_query_products_rating:  &augment_query_products_rating
                                                         -------------- ***** CONDITION
                                                         A.Activo = 'SI' AND
                                                         A.Habilitado_Tematika = 'S' AND
-                                                        A.Precio_Venta_Vigente >= 7.0
+                                                        A.Precio_Venta_Vigente >= 7.0 AND
+                                                        A.Archivo_Imagen IS NOT NULL AND
+                                                        A.Archivo_Imagen <> 'N'
                                             -------------- Disponibilidades
                                             INNER JOIN  Disponibilidades D
                                                 ON      A.Id_Disponibilidad = D.Id_Disponibilidad AND
@@ -322,7 +327,9 @@ augment_query_products_authors:  &augment_query_products_authors
                                                         -------------- ***** CONDITION
                                                         A.Activo = 'SI' AND
                                                         A.Habilitado_Tematika = 'S' AND
-                                                        A.Precio_Venta_Vigente >= 7.0
+                                                        A.Precio_Venta_Vigente >= 7.0 AND
+                                                        A.Archivo_Imagen IS NOT NULL AND
+                                                        A.Archivo_Imagen <> 'N'
                                             -------------- Disponibilidades
                                             INNER JOIN  Disponibilidades D
                                                 ON      A.Id_Disponibilidad = D.Id_Disponibilidad AND
