--- a/content/dataset/SUBJ/subjectMainSubfamilia.yaml
+++ b/content/dataset/SUBJ/subjectMainSubfamilia.yaml
@@ -174,7 +174,9 @@ query_products_main:     &query_products_main
                                 -------------- ***** CONDITION
                                 A.Activo = 'SI' AND
                                 A.Habilitado_Tematika = 'S' AND
-                                A.Precio_Venta_Vigente >= 7.0
+                                A.Precio_Venta_Vigente >= 7.0 AND
+                                A.Archivo_Imagen IS NOT NULL AND
+                                A.Archivo_Imagen <> 'N'
                     -------------- Ranking
                     LEFT JOIN   Mas_Vendidos_Subfamilia MVS
                         ON      A.Categoria_Seccion     = MVS.Categoria_Seccion    AND
@@ -232,6 +234,7 @@ query_products_main:     &query_products_main
                           "Fulfillment_desc", "TipoArticulo_desc", "Row_Number" ]
     query.post:         [ "tmklib.fixes.PROD.title",
                           "tmklib.fixes.PROD.calcImages",
+                          "tmklib.fixes.PROD.filterWithoutImage",
                           "tmklib.PROD.calculateTaxes",
                           "tmklib.url.PROD",
                           "tmklib.fixes.PROD.embedRatings",
@@ -270,7 +273,9 @@ augment_query_products_rating:  &augment_query_products_rating
                                                         -------------- ***** CONDITION
                                                         A.Activo = 'SI' AND
                                                         A.Habilitado_Tematika = 'S' AND
-                                                        A.Precio_Venta_Vigente >= 7.0
+                                                        A.Precio_Venta_Vigente >= 7.0 AND
+                                                        A.Archivo_Imagen IS NOT NULL AND
+                                                        A.Archivo_Imagen <> 'N'
                                             -------------- Disponibilidades
                                             INNER JOIN  Disponibilidades D
                                                 ON      A.Id_Disponibilidad = D.Id_Disponibilidad AND
@@ -334,7 +339,9 @@ augment_query_products_authors:  &augment_query_products_authors
                                                         -------------- ***** CONDITION
                                                         A.Activo = 'SI' AND
                                                         A.Habilitado_Tematika = 'S' AND
-                                                        A.Precio_Venta_Vigente >= 7.0
+                                                        A.Precio_Venta_Vigente >= 7.0 AND
+                                                        A.Archivo_Imagen IS NOT NULL AND
+                                                        A.Archivo_Imagen <> 'N'
                                             -------------- Disponibilidades
                                             INNER JOIN  Disponibilidades D
                                                 ON      A.Id_Disponibilidad = D.Id_Disponibilidad AND
